--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "@prisma/client": "^5.19.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
