--- a/package.json
+++ b/package.json
@@ -22,14 +22,18 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.0",
     "@types/morgan": "^1.9.9",
     "@types/pug": "^2.0.10",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "env-var": "^7.5.0",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "helmet": "^7.1.0",
     "morgan": "^1.10.0",
     "pug": "^3.0.3"
